fixing PV1 errors

--- a/rest_api/monitoring_apis/probe-monitoring-coreos-com-v1.adoc
+++ b/rest_api/monitoring_apis/probe-monitoring-coreos-com-v1.adoc
@@ -83,7 +83,7 @@ Type::
 
 | `keepDroppedTargets`
 | `integer`
-| Per-scrape limit on the number of targets dropped by relabeling that will be kept in memory. 0 means no limit. 
+| Per-scrape limit on the number of targets dropped by relabeling that will be kept in memory. 0 means no limit.
  It requires Prometheus >= v2.47.0.
 
 | `labelLimit`
@@ -104,7 +104,7 @@ Type::
 
 | `metricRelabelings[]`
 | `object`
-| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `module`
@@ -163,8 +163,8 @@ Type::
 
 | `type`
 | `string`
-| Defines the authentication type. The value is case-insensitive. 
- "Basic" is not a supported value. 
+| Defines the authentication type. The value is case-insensitive.
+ "Basic" is not a supported value.
  Default: "Bearer"
 
 |===
@@ -339,7 +339,7 @@ Type::
 Description::
 +
 --
-RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
@@ -355,13 +355,13 @@ Type::
 
 | `action`
 | `string`
-| Action to perform based on the regex matching. 
- `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0. 
+| Action to perform based on the regex matching.
+ `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0.
  Default: "Replace"
 
 | `modulus`
 | `integer`
-| Modulus to take of the hash of the source label values. 
+| Modulus to take of the hash of the source label values.
  Only applicable when the action is `HashMod`.
 
 | `regex`
@@ -370,7 +370,7 @@ Type::
 
 | `replacement`
 | `string`
-| Replacement value against which a Replace action is performed if the regular expression matches. 
+| Replacement value against which a Replace action is performed if the regular expression matches.
  Regex capture groups are available.
 
 | `separator`
@@ -383,8 +383,8 @@ Type::
 
 | `targetLabel`
 | `string`
-| Label to which the resulting string is written in a replacement. 
- It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions. 
+| Label to which the resulting string is written in a replacement.
+ It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions.
  Regex capture groups are available.
 
 |===
@@ -637,11 +637,11 @@ Type::
 
 | `relabelingConfigs`
 | `array`
-| RelabelConfigs to apply to the label set of the target before it gets scraped. The original ingress address is available via the `__tmp_prometheus_ingress_address` label. It can be used to customize the probed URL. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+| RelabelConfigs to apply to the label set of the target before it gets scraped. The original ingress address is available via the `\__tmp_prometheus_ingress_address` label. It can be used to customize the probed URL. The original scrape job's name is available via the `\__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `relabelingConfigs[]`
 | `object`
-| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `selector`
@@ -679,7 +679,7 @@ Type::
 Description::
 +
 --
-RelabelConfigs to apply to the label set of the target before it gets scraped. The original ingress address is available via the `__tmp_prometheus_ingress_address` label. It can be used to customize the probed URL. The original scrape job's name is available via the `__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+RelabelConfigs to apply to the label set of the target before it gets scraped. The original ingress address is available via the `\__tmp_prometheus_ingress_address` label. It can be used to customize the probed URL. The original scrape job's name is available via the `\__tmp_prometheus_job_name` label. More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
 Type::
@@ -692,7 +692,7 @@ Type::
 Description::
 +
 --
-RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
@@ -708,13 +708,13 @@ Type::
 
 | `action`
 | `string`
-| Action to perform based on the regex matching. 
- `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0. 
+| Action to perform based on the regex matching.
+ `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0.
  Default: "Replace"
 
 | `modulus`
 | `integer`
-| Modulus to take of the hash of the source label values. 
+| Modulus to take of the hash of the source label values.
  Only applicable when the action is `HashMod`.
 
 | `regex`
@@ -723,7 +723,7 @@ Type::
 
 | `replacement`
 | `string`
-| Replacement value against which a Replace action is performed if the regular expression matches. 
+| Replacement value against which a Replace action is performed if the regular expression matches.
  Regex capture groups are available.
 
 | `separator`
@@ -736,8 +736,8 @@ Type::
 
 | `targetLabel`
 | `string`
-| Label to which the resulting string is written in a replacement. 
- It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions. 
+| Label to which the resulting string is written in a replacement.
+ It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions.
  Regex capture groups are available.
 
 |===
@@ -844,7 +844,7 @@ Type::
 
 | `relabelingConfigs[]`
 | `object`
-| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `static`
@@ -869,7 +869,7 @@ Type::
 Description::
 +
 --
-RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
@@ -885,13 +885,13 @@ Type::
 
 | `action`
 | `string`
-| Action to perform based on the regex matching. 
- `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0. 
+| Action to perform based on the regex matching.
+ `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0.
  Default: "Replace"
 
 | `modulus`
 | `integer`
-| Modulus to take of the hash of the source label values. 
+| Modulus to take of the hash of the source label values.
  Only applicable when the action is `HashMod`.
 
 | `regex`
@@ -900,7 +900,7 @@ Type::
 
 | `replacement`
 | `string`
-| Replacement value against which a Replace action is performed if the regular expression matches. 
+| Replacement value against which a Replace action is performed if the regular expression matches.
  Regex capture groups are available.
 
 | `separator`
@@ -913,8 +913,8 @@ Type::
 
 | `targetLabel`
 | `string`
-| Label to which the resulting string is written in a replacement. 
- It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions. 
+| Label to which the resulting string is written in a replacement.
+ It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions.
  Regex capture groups are available.
 
 |===
@@ -1275,7 +1275,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/probe-monitoring-coreos-com-v1.adoc#probe-monitoring-coreos-com-v1[`Probe`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1408,7 +1408,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/probe-monitoring-coreos-com-v1.adoc#probe-monitoring-coreos-com-v1[`Probe`] schema
-| 
+|
 |===
 
 .HTTP responses
