--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -88,7 +88,7 @@ Overcommitting memory on a highly utilized system can decrease workload performa
 * As a cluster administrator, you can xref:../../virt/virtual_machines/advanced_vm_management/virt-configuring-usb-host-passthrough.adoc#virt-configuring-usb-host-passthrough[expose USB devices in a cluster], making them available for virtual machine (VM) owners to assign to VMs. You expose a USB device by first enabling host passthrough and then configuring the VM to access the USB device.
 
 //CNV-40005 Application-aware resource quota
-* You can now use the Application-Aware Quota (AAQ) Operator to customize and manage resource quotas for individual components in an {product-title} cluster. The AAQ Operator provides the `ApplicationAwareResourceQuota` and `ApplicationAwareClusterResourceQuota` custom resource definitions (CRDs) that can be used to allocate resources without interfering with cluster-level activities such as upgrades and node maintenance.
+* You can now use the xref:../../virt/virtual_machines/advanced_vm_management/virt-understanding-aaq-operator.adoc#virt-understanding-aaq-operator[Application-Aware Quota (AAQ) Operator] to customize and manage resource quotas for individual components in an {product-title} cluster. The AAQ Operator provides the `ApplicationAwareResourceQuota` and `ApplicationAwareClusterResourceQuota` custom resource definitions (CRDs) that can be used to allocate resources without interfering with cluster-level activities such as upgrades and node maintenance.
 
 
 //[id="virt-4-17-networking"]
