--- a/backup_and_restore/application_backup_and_restore/installing/installing-oadp-ibm-cloud.adoc
+++ b/backup_and_restore/application_backup_and_restore/installing/installing-oadp-ibm-cloud.adoc
@@ -11,8 +11,9 @@ toc::[]
 
 You install the {oadp-first} Operator on an {ibm-cloud-title} cluster to backup and restore applications on the cluster. You configure {ibm-cloud-object-storage} to store the backups.
 
-//include::modules/creating-ibm-cos-instance.adoc[leveloffset=+1]
+// configuring the IBM COS instance
 include::modules/configuring-ibm-cos.adoc[leveloffset=+1]
+// include the DPA module
 include::modules/oadp-installing-dpa-1-3.adoc[leveloffset=+1]
 
 :!installing-oadp-ibm-cloud:
