--- a/modules/oadp-backing-up-opt-out.adoc
+++ b/modules/oadp-backing-up-opt-out.adoc
@@ -30,5 +30,5 @@ where:
 
 [NOTE]
 ====
-You can ecan enable this behavior for all velero backups by setting below flag to true in  the Data Protection Application (DPA) resource `dpa.spec.configuration.velero.defaultVolumesToFSBackup`.
+You can enable this behavior for all velero backups by setting below flag to true in  the Data Protection Application (DPA) resource `dpa.spec.configuration.velero.defaultVolumesToFSBackup`.
 ====
