--- a/modules/oadp-backing-up-opt-out.adoc
+++ b/modules/oadp-backing-up-opt-out.adoc
@@ -16,19 +16,48 @@ You can use the opt-out method to specify which volumes *not* to back up. You ca
 
 .Procedure
 
-* On each pod that contains one or more volumes that you do not want to back up, run the following command:
+* On each pod that contains one or more volumes that you do not want to back up, where `<your_volume_name_x>` specifies the name of the xth volume in the pod specification, run the following command:
 +
 [source,terminal]
 ----
 $ oc -n <your_pod_namespace> annotate pod/<your_pod_name> \
-  backup.velero.io/backup-volumes=<your_volume_name_1>,<your_volume_name_2>...,<your_volume_name_n>
+  backup.velero.io/backup-volumes=<your_volume_name_x>,<your_volume_name_y>...,<your_volume_name_z>
 ----
-+
-where:
 
-`<your_volume_name_x>`:: specifies the name of the xth volume in the pod specification.
+You can enable this behavior for all velero backups by setting below flag to true in the Data Protection Application (DPA) resource `dpa.spec.configuration.velero.defaultVolumesToFSBackup`:
 
-[NOTE]
-====
-You can enable this behavior for all velero backups by setting below flag to true in  the Data Protection Application (DPA) resource `dpa.spec.configuration.velero.defaultVolumesToFSBackup`.
-====
+[source,terminal]
+----
+apiVersion: oadp.openshift.io/v1alpha1
+kind: DataProtectionApplication
+metadata:
+  name: oadp-backup
+  namespace: openshift-adp
+spec:
+  configuration:
+    nodeAgent:
+      enable: true
+      uploaderType: kopia
+    velero:
+      defaultPlugins:
+        - aws
+        - openshift
+        - csi
+      defaultVolumesToFSBackup: true
+  backupLocations:
+    - velero:
+        config:
+          profile: "default"
+          region: noobaa
+          s3Url: https://s3.openshift-storage.svc 
+          s3ForcePathStyle: "true"
+          insecureSkipTLSVerify: "true"
+        provider: aws
+        default: true
+        credential:
+          key: cloud
+          name:  cloud-credentials
+        objectStorage:
+          bucket: <bucket_name> 
+          prefix: oadp
+----
