--- a/backup_and_restore/application_backup_and_restore/installing/installing-oadp-ibm-cloud.adoc
+++ b/backup_and_restore/application_backup_and_restore/installing/installing-oadp-ibm-cloud.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="installing-oadp-ibm-cloud"]
-= Configuring the {oadp-full} with {ibm-cloud-title}
+= Configuring the {oadp-full} with {ibm-cloud-name}
 include::_attributes/common-attributes.adoc[]
 :context: installing-oadp-ibm-cloud
 :installing-oadp-ibm-cloud:
