--- a/networking/openshift_sdn/about-openshift-sdn.adoc
+++ b/networking/openshift_sdn/about-openshift-sdn.adoc
@@ -21,5 +21,10 @@ ifdef::openshift-enterprise,openshift-webscale,openshift-origin[]
 include::modules/nw-openshift-sdn-modes.adoc[leveloffset=+1]
 endif::[]
 
-// flipped table for OpenShift SDN
+// Supported network plugin feature matrix
 include::modules/nw-ovn-kubernetes-matrix.adoc[leveloffset=+1]
+
+[role="_additional-resources"]
+.Additional resources
+
+* For more information about dual-stack networking limitations on {vmw-full}, see xref:../../installing/installing_vsphere/installing-vsphere-installer-provisioned-network-customizations.adoc#modifying-install-config-for-dual-stack-network_installing-vsphere-installer-provisioned-network-customizations[Optional: Deploying with dual-stack networking].
