--- a/networking/ovn_kubernetes_network_provider/about-ovn-kubernetes.adoc
+++ b/networking/ovn_kubernetes_network_provider/about-ovn-kubernetes.adoc
@@ -45,7 +45,14 @@ The OVN controller programs the Open vSwitch daemon on the nodes to support the 
 
 include::modules/nw-ovn-kubernetes-features.adoc[leveloffset=+1]
 
+// Supported network plugin feature matrix
 include::modules/nw-ovn-kubernetes-matrix.adoc[leveloffset=+1]
+
+[role="_additional-resources"]
+.Additional resources
+
+* For more information about dual-stack networking limitations on {vmw-full}, see xref:../../installing/installing_vsphere/installing-vsphere-installer-provisioned-network-customizations.adoc#modifying-install-config-for-dual-stack-network_installing-vsphere-installer-provisioned-network-customizations[Optional: Deploying with dual-stack networking].
+
 // This is a moving target; what is included isn't valid for 4.6
 //include::modules/nw-ovn-kubernetes-metrics.adoc[leveloffset=+1]
 
