--- a/modules/oadp-backing-up-opt-in.adoc
+++ b/modules/oadp-backing-up-opt-in.adoc
@@ -6,7 +6,7 @@
 :_mod-docs-content-type: PROCEDURE
 = Backing up pod volumes by using the opt-in method
 
-You can use the opt-in method to specify which volumes need to be backed up by File System Backup (FSB). You can do this by using the `backup.velero.io/backup-volumes` command, where `<your_volume_name_x>` specifies the name of the xth volume in the pod specification.
+You can use the opt-in method to specify which volumes need to be backed up by File System Backup (FSB). You can do this by using the `backup.velero.io/backup-volumes` command, where `<your_volume_name_x>` specifies the name of the _number_ of the volume in the pod specification.
 
 .Procedure
 
