Make GA only the SDK injection
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -98,8 +98,30 @@ spec:
 
 |===
 
+[id="otel-configuration-of-opentelemetry-sdk-variables_{context}"]
+== Configuration of the OpenTelemetry SDK variables
+
+The OpenTelemetry SDK variables in your pod are configurable by using the following annotation:
+
+[source,yaml]
+----
+instrumentation.opentelemetry.io/inject-sdk: "true"
+----
+
+Note that all the annotations accept the following values:
+
+`true`:: Injects the `+Instrumentation+` resource from the namespace.
+
+`false`:: Does not inject any instrumentation.
+
+`instrumentation-name`:: The name of the instrumentation resource to inject from the current namespace.
+
+`other-namespace/instrumentation-name`:: The name of the instrumentation resource to inject from another namespace.
+
 [id="otel-configuration-of-apache-http-server-auto-instrumentation_{context}"]
 == Configuration of the Apache HTTP Server auto-instrumentation
+
+include::snippets/technology-preview.adoc[leveloffset=+1]
 
 .Parameters for the `+.spec.apacheHttpd+` field
 [options="header"]
@@ -142,6 +164,8 @@ instrumentation.opentelemetry.io/inject-apache-httpd: "true"
 [id="otel-configuration-of-dotnet-auto-instrumentation_{context}"]
 == Configuration of the .NET auto-instrumentation
 
+include::snippets/technology-preview.adoc[leveloffset=+1]
+
 [options="header"]
 [cols="a, a"]
 |===
@@ -168,6 +192,8 @@ instrumentation.opentelemetry.io/inject-dotnet: "true"
 
 [id="otel-configuration-of-go-auto-instrumentation_{context}"]
 == Configuration of the Go auto-instrumentation
+
+include::snippets/technology-preview.adoc[leveloffset=+1]
 
 [options="header"]
 [cols="a, a"]
@@ -227,6 +253,8 @@ $ oc adm policy add-scc-to-user otel-go-instrumentation-scc -z <service_account>
 [id="otel-configuration-of-java-auto-instrumentation_{context}"]
 == Configuration of the Java auto-instrumentation
 
+include::snippets/technology-preview.adoc[leveloffset=+1]
+
 [options="header"]
 [cols="a, a"]
 |===
@@ -251,6 +279,8 @@ instrumentation.opentelemetry.io/inject-java: "true"
 
 [id="otel-configuration-of-nodejs-auto-instrumentation_{context}"]
 == Configuration of the Node.js auto-instrumentation
+
+include::snippets/technology-preview.adoc[leveloffset=+1]
 
 [options="header"]
 [cols="a, a"]
@@ -280,6 +310,8 @@ The `+instrumentation.opentelemetry.io/otel-go-auto-target-exe+` annotation sets
 [id="otel-configuration-of-python-auto-instrumentation_{context}"]
 == Configuration of the Python auto-instrumentation
 
+include::snippets/technology-preview.adoc[leveloffset=+1]
+
 [options="header"]
 [cols="a, a"]
 |===
@@ -303,26 +335,6 @@ For Python auto-instrumentation, the `OTEL_EXPORTER_OTLP_ENDPOINT` environment v
 ----
 instrumentation.opentelemetry.io/inject-python: "true"
 ----
-
-[id="otel-configuration-of-opentelemetry-sdk-variables_{context}"]
-== Configuration of the OpenTelemetry SDK variables
-
-The OpenTelemetry SDK variables in your pod are configurable by using the following annotation:
-
-[source,yaml]
-----
-instrumentation.opentelemetry.io/inject-sdk: "true"
-----
-
-Note that all the annotations accept the following values:
-
-`true`:: Injects the `+Instrumentation+` resource from the namespace.
-
-`false`:: Does not inject any instrumentation.
-
-`instrumentation-name`:: The name of the instrumentation resource to inject from the current namespace.
-
-`other-namespace/instrumentation-name`:: The name of the instrumentation resource to inject from another namespace.
 
 [id="otel-multi-container-pods_{context}"]
 == Multi-container pods
