Document env variables
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -101,14 +101,24 @@ spec:
 [id="otel-configuration-of-opentelemetry-sdk-variables_{context}"]
 == Configuration of the OpenTelemetry SDK variables
 
-The OpenTelemetry SDK variables in your pod are configurable by using the following annotation:
+The following OpenTelemetry SDK environment variables in your pod are injected by the {OTELName} Operator when `instrumentation.opentelemetry.io/inject-sdk` is used.
+
+* `OTEL_SERVICE_NAME`
+* `OTEL_TRACES_SAMPLER`
+* `OTEL_TRACES_SAMPLER_ARG`
+* `OTEL_PROPAGATORS`
+* `OTEL_RESOURCE_ATTRIBUTES`
+* `OTEL_EXPORTER_OTLP_ENDPOINT`
+* `OTEL_EXPORTER_OTLP_CERTIFICATE`
+* `OTEL_EXPORTER_OTLP_CLIENT_CERTIFICATE`
+* `OTEL_EXPORTER_OTLP_CLIENT_KEY`
+
+The inject annotation can accept following values:
 
 [source,yaml]
 ----
 instrumentation.opentelemetry.io/inject-sdk: "true"
 ----
-
-Note that all the annotations accept the following values:
 
 `true`:: Injects the `+Instrumentation+` resource from the namespace.
 
