OSSM-8307 Release notes troubleshooting for Pantheon

--- a/ossm-release-notes/ossm-release-notes-assembly.adoc
+++ b/ossm-release-notes/ossm-release-notes-assembly.adoc
@@ -1,6 +1,6 @@
 :_content-type: ASSEMBLY
 [id="ossm-release-notes-assembly"]
-= OpenShift Service Mesh 3.x release notes
+= OpenShift Service Mesh release notes
 include::_attributes/common-attributes.adoc[]
 :context: ossm-release-notes-assembly
 
@@ -22,6 +22,17 @@ include::modules/ossm-release-3-0-TP-1.adoc[leveloffset=+1]
 // [role="_additional-resources"]
 // [id="additional-resources_{context}"]
 // .Additional resources
+
+//Notes Oct 25, 2024
+//Troubleshooting Pantheon. All builds are failing and give the same generic error.
+//Troubleshooting rel notes first.
+//Removed 3.x from title of ossm-release-notes-assembly
+//Removed attribute (again) from title
+//Considered renaming title and corresponding subtitle in docinfo to: Release notes. Considered doing so for the sake of simplicity, however, Doc Peer Review and Doc Merge Review would likely require the title to be OpenShift Service Mesh release notes per style guidelines. If the other changes fail, will try "Release notes" as title anyway.
+//Sentence case for subtitle in docinfo.xml to match sentence case title in ossm-release-notes-assembly
+//Update version in docinfo.xml to be 3.0.0tp1 to match what Jenkins seems to be looking for
+//The joys of setting something up in Pantheon for the first time.
+//These notes will be removed once Pantheon build passes.
 
 
 // This is OSSM 3.0 TP 1 content. Technology Preview banner is persistent and was handled by a separate PR from Tim O'Keefe. It has also been added to rel notes so users will see it twice: once at the top of the page, and again within rel notes. OCP writers suggested it should appear in rel notes, even if it means the user sees it twice.
