Updates common attr file for SM to resolve pantheon issue

--- a/_attributes/common-attributes.adoc
+++ b/_attributes/common-attributes.adoc
@@ -16,7 +16,7 @@
 :SMProductName: Red Hat OpenShift Service Mesh
 :SMProduct: OpenShift Service Mesh
 :SMProductShortName: Service Mesh
-:SMProductVersion: 3.0
+:SMProductVersion: 3.0.0tp1
 //Kiali
 :KialiProduct: Kiali Operator provided by Red Hat
 //Console
