CNV#48413: TP DevPreviewLongLifecycle to GA LongLifecycle

--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -132,6 +132,9 @@ To access the new view, navigate to *Administrator* -> *Virtualization* in the w
 
 Deprecated features are included in the current release and supported. However, they will be removed in a future release and are not recommended for new deployments.
 
+//CNV-48413: TP DevPreviewLongLifecycle to GA LongLifecycle
+* The `DevPreviewLongLifecycle` profile is deprecated. The profile is now `LongLifecycle` and is generally available.
+
 //CNV-26426 [DOCS] Release note: Deprecate TTO
 * The `tekton-tasks-operator` is deprecated and Tekton tasks and example pipelines are now deployed by the `ssp-operator`.
 
