Add one more comment
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -176,6 +176,11 @@ instrumentation.opentelemetry.io/inject-apache-httpd: "true"
 
 include::snippets/technology-preview.adoc[leveloffset=+1]
 
+[IMPORTANT]
+====
+This feature by default injects not supported upstream instrumentation libraries.
+====
+
 [options="header"]
 [cols="a, a"]
 |===
@@ -204,6 +209,11 @@ instrumentation.opentelemetry.io/inject-dotnet: "true"
 == Configuration of the Go auto-instrumentation
 
 include::snippets/technology-preview.adoc[leveloffset=+1]
+
+[IMPORTANT]
+====
+This feature by default injects not supported upstream instrumentation libraries.
+====
 
 [options="header"]
 [cols="a, a"]
@@ -265,6 +275,11 @@ $ oc adm policy add-scc-to-user otel-go-instrumentation-scc -z <service_account>
 
 include::snippets/technology-preview.adoc[leveloffset=+1]
 
+[IMPORTANT]
+====
+This feature by default injects not supported upstream instrumentation libraries.
+====
+
 [options="header"]
 [cols="a, a"]
 |===
@@ -291,6 +306,11 @@ instrumentation.opentelemetry.io/inject-java: "true"
 == Configuration of the Node.js auto-instrumentation
 
 include::snippets/technology-preview.adoc[leveloffset=+1]
+
+[IMPORTANT]
+====
+This feature by default injects not supported upstream instrumentation libraries.
+====
 
 [options="header"]
 [cols="a, a"]
@@ -321,6 +341,11 @@ The `+instrumentation.opentelemetry.io/otel-go-auto-target-exe+` annotation sets
 == Configuration of the Python auto-instrumentation
 
 include::snippets/technology-preview.adoc[leveloffset=+1]
+
+[IMPORTANT]
+====
+This feature by default injects not supported upstream instrumentation libraries.
+====
 
 [options="header"]
 [cols="a, a"]
